@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
 [i386 armhf]: binary-file-built-without-LFS-support
-[i386 amd64]: shlib-with-executable-stack
-[i386]: shlib-with-non-pic-code
+[i386 amd64]: executable-stack-in-shared-library
+[i386]: specific-address-in-shared-library
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
