@@ -5,8 +5,8 @@ libnvidia-cfg.so.1 #PACKAGE# #MINVER# | libnvidia-cfg.so.1 #MINVER#
  nvCfgCloseDevice@Base 1.0.8174
  nvCfgDebug@Base 180
  nvCfgDetachDevice@Base 319
- nvCfgGetDeviceUUID@Base 325
  nvCfgFlashGSyncDevice@Base 304.30
+ nvCfgGetDeviceUUID@Base 325
  nvCfgGetDevices@Base 1.0.8174
  nvCfgGetDisplayDevices@Base 1.0.8174
  nvCfgGetEDID@Base 1.0.8174
