@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
 [i386]: binary-file-built-without-LFS-support
 binary-has-unneeded-section
-[i386]: shlib-with-executable-stack
+[i386]: executable-stack-in-shared-library
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
