@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-[i386]: shlib-with-non-pic-code
+[i386]: specific-address-in-shared-library
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
