@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [i386]: binary-file-built-without-LFS-support
-shlib-with-executable-stack
+executable-stack-in-shared-library
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
