@@ -6,3 +6,7 @@ hardening-no-fortify-functions
 hardening-no-pie
 hardening-no-relro
 hardening-no-stackprotector
+
+# The current setup involving multiple chained alternatives would be very
+# hard to migrate to /usr/libexec.
+executable-in-usr-lib
