@@ -1,1 +1,1 @@
-Name: NVIDIA Linux Display Driver
+Bug-Database: https://forums.developer.nvidia.com/c/gpu-unix-graphics/linux/148
