@@ -76,6 +76,7 @@ nvidia-graphics-drivers (340.108-1~git4deb9stretch) UNRELEASED; urgency=medium
     and work around mmap_{sem=>lock} rename
     and modernize use-nv-kernel-ARCH.o_binary.patch
     to fix kernel module build for Linux 5.8.
+  * Update lintian overrides.
   * Bump Standards-Version to 4.5.0. No changes needed.
 
   [ Vincent Cheng ]
